# cubegui-plugin

./: .gitignore  CMakeLists.txt  README.md
data/: dummy_test.json
src/: ParseToJSONPlugin.cpp  ParseToJSONPlugin.h  SystemTreePlugin.cpp  SystemTreePlugin.h
